# model-audit

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: auto-review.yml  ci.yml  notify-website.yml  publish.yml
docs/: landing-en.md  landing-zh.md
reports/: kimi-k2.5-vs-claude-audit.md
src/modelaudit/: __init__.py  base.py  benchmark.py  cache.py  cli.py  config.py  engine.py  mcp_server.py  models.py  registry.py  report.py
src/modelaudit/methods/: __init__.py  dli.py  llmmap.py  reef.py  style.py
src/modelaudit/probes/: __init__.py  prompts.py
tests/: test_benchmark.py  test_cache.py  test_cli.py  test_dli.py  test_engine.py  test_llmmap.py  test_mcp_server.py  test_models.py  test_publish_workflow.py  test_reef.py  test_registry.py  test_report.py  test_style.py
